# RedlandBuildTest

./: CMakeLists.txt  build-all-redland.sh  get-librdf.sh  get-raptor.sh  get-rasqal.sh  main.c
raptor2-2.0.15/: Makefile  autogen-get-version.pl  config.status  raptor2.pc
raptor2-2.0.15/autom4te.cache/: requests
raptor2-2.0.15/data/: Makefile
raptor2-2.0.15/docs/: Makefile
raptor2-2.0.15/examples/: Makefile
raptor2-2.0.15/librdfa/: Makefile
raptor2-2.0.15/scripts/: Makefile  build-formats
raptor2-2.0.15/scripts/.libs/: build-formats
raptor2-2.0.15/src/: Makefile  libraptor2.la
raptor2-2.0.15/src/.libs/: libraptor2.lai
raptor2-2.0.15/tests/: Makefile
raptor2-2.0.15/tests/feeds/: Makefile
raptor2-2.0.15/tests/grddl/: Makefile
raptor2-2.0.15/tests/json/: Makefile
raptor2-2.0.15/tests/nquads-2013/: Makefile
raptor2-2.0.15/tests/ntriples/: Makefile
raptor2-2.0.15/tests/ntriples-2013/: Makefile
raptor2-2.0.15/tests/rdfa/: Makefile
raptor2-2.0.15/utils/: Makefile  rapper  rdfdiff
rasqal-0.9.33/: Makefile  config.status  rasqal-src-config  rasqal.pc
rasqal-0.9.33/autom4te.cache/: requests
rasqal-0.9.33/data/: Makefile
rasqal-0.9.33/docs/: Makefile
rasqal-0.9.33/getopt/: Makefile
rasqal-0.9.33/libmtwist/: Makefile
rasqal-0.9.33/libsv/: Makefile
rasqal-0.9.33/scripts/: Makefile
rasqal-0.9.33/src/: Makefile  librasqal.la
rasqal-0.9.33/tests/: Makefile
rasqal-0.9.33/utils/: Makefile  check-query  roqet
rasqal-0.9.33/win32/: Makefile
redland-1.0.17/: Makefile  config.status  redland-src-config  redland.pc
redland-1.0.17/autom4te.cache/: requests
redland-1.0.17/data/: Makefile
redland-1.0.17/demos/: Makefile
redland-1.0.17/docs/: Makefile
redland-1.0.17/examples/: Makefile
redland-1.0.17/libltdl/: Makefile  config.status  libltdlc.la
redland-1.0.17/scripts/: Makefile
redland-1.0.17/src/: Makefile  librdf.la
redland-1.0.17/utils/: Makefile  rdfproc  redland-db-upgrade
(+45 files in other folders)
